@@ -24,7 +24,7 @@ siteTag   = ALC
 
 debugMode = True
 ftpDaemon = glftpd
-modules   = free groups help readlogs
+modules   = free groups help pretimes readlogs
 varFiles  = core.vars glftpd.vars pzs-ng.vars
 themeFile = default-gl.theme
 
@@ -71,6 +71,9 @@ version  = 2.01
 
 # Help module.
 !???help  = +target=notice
+
+# Pretimes module.
+!pre        = +target=notice
 
 #### Sections
 #
@@ -145,6 +148,31 @@ XVID    = "/site/XVID/"  "#Alc"     "-wipe +all"
 [Module::Groups]
 cmdPrefix  = !
 groupsFile = groups.conf
+
+#### Module: Pre Times
+#
+# Name: pretimes
+# Desc: Display and search for release pre times.
+# Path: modules/generic/pretimes
+#
+# cmdPrefix  - Command prefix for commands specific to this module. The
+#              default prefix will be used if this option is undefined.
+# dataSource - Name of the ODBC data source (use pretime.sql for the table scheme).
+# defLimit   - Default time limit, in minutes, until a release is considered
+#              late. This can be set on a per-section basis with "+pretime=mins".
+#
+# addOnPre   - Add releases to database when pre'd (PRE log event).
+# searchPres - Allow users to search the pre database, using the !pre command.
+# showOnNew  - Show pre time when a directory is created (NEWDIR log event).
+#
+[Module::PreTimes]
+cmdPrefix  = !
+dataSource = PreTimes
+defLimit   = 5
+
+addOnPre   = False
+searchPres = True
+showOnNew  = True
 
 #### Module: Read Logs
 #
