@@ -24,7 +24,7 @@ siteTag   = ALC
 
 debugMode = True
 ftpDaemon = ioftpd
-modules   = free groups help nxtools readlogs
+modules   = free groups help nxtools pretimes readlogs
 varFiles  = core.vars ioftpd.vars iozs.vars nxautonuke.vars nxtools.vars
 themeFile = default-io.theme
 
@@ -72,6 +72,9 @@ msgWindow = ioFTPD::MessageWindow
 !???nukes   = +target=notice
 !???unnukes = +target=notice
 !???undupe  = +flags=o -all
+
+# Pretimes module.
+!pre        = +target=notice
 
 #### Sections
 #
@@ -169,6 +172,31 @@ groupsFile = groups.conf
 [Module::NxTools]
 configFile = E:/ioFTPD/scripts/nxTools.cfg
 dataPath   = E:/ioFTPD/scripts/nxTools/data/
+
+#### Module: Pre Times
+#
+# Name: pretimes
+# Desc: Display and search for release pre times.
+# Path: modules/generic/pretimes
+#
+# cmdPrefix  - Command prefix for commands specific to this module. The
+#              default prefix will be used if this option is undefined.
+# dataSource - Name of the ODBC data source (use pretime.sql for the table scheme).
+# defLimit   - Default time limit, in minutes, until a release is considered
+#              late. This can be set on a per-section basis with "+pretime=mins".
+#
+# addOnPre   - Add releases to database when pre'd (PRE log event).
+# searchPres - Allow users to search the pre database, using the !pre command.
+# showOnNew  - Show pre time when a directory is created (NEWDIR log event).
+#
+[Module::PreTimes]
+cmdPrefix  = !
+dataSource = PreTimes
+defLimit   = 5
+
+addOnPre   = False
+searchPres = True
+showOnNew  = True
 
 #### Module: Read Logs
 #
