@@ -39,3 +39,10 @@ helpHead    =
 helpType    = type:z
 helpBody    = arguments:z command:z description:z
 helpFoot    =
+
+# Module: pretimes
+preHead     = pattern:z
+preBody     = pre:t section:z release:z files:n size:k disks:n age:d num:n
+preNuke     = pre:t section:z release:z files:n size:k disks:n age:d nuke:t reason:z num:n
+preNone     = pattern:z
+preFoot     =
